<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_sem_conexao"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem_conexao"
        android:layout_marginTop="@dimen/margin_top_botoes"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        style="@style/fonteSemConexao"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal|center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem_conexao_2"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left"
        style="@style/fonteSemConexao"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <ImageView
        android:layout_width="117dp"
        android:layout_height="151dp"
        android:src="@drawable/sem_conexao"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnTentaConexao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tente_novamente"
        style="@style/fonteSemConexao"
        android:background="@drawable/btn_tente_novamente"
        android:layout_marginTop="@dimen/margin_top_tente_novamente"
        android:layout_marginLeft="@dimen/margin_left_tente_novamente"
        android:layout_marginRight="@dimen/margin_right_tente_novamente"
        android:layout_marginBottom="@dimen/margin_bottom_tente_novamente"/>

</LinearLayout>